mType/tests/testFiles/import/pass/staticArrayReturn/A.mt
class A {
    public static function names(): string[] {
        string[] arr = new string[2];
        arr[0] = "alpha";
        arr[1] = "beta";
        return arr;
    }

    public static function counts(): int[] {
        int[] arr = new int[3];
        arr[0] = 10;
        arr[1] = 20;
        arr[2] = 30;
        return arr;
    }
}
