mType/tests/testFiles/import/error/diamondConflict/ModB.mt
public class Widget {
    public function id(): string {
        return "B";
    }
}
